--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
-    "express": "^4.18.1",
-    "node-fetch": "^3.2.9",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.1",
     "pg": "^8.7.3"
   },
   "engines": {
